Add more information in the meta tags for better SEO

--- a/index.html
+++ b/index.html
@@ -2,9 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Lumi AI</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- FOR SEO -->
+  <meta name="description" content="Lumi is an AI call agent that books appointments, answers calls, and boosts efficiency for clinics, and other businesses. Try a demo today. Now available in Australia">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://lumicalls.com">
+  <script src="https://analytics.ahrefs.com/analytics.js" data-key="V2ncXfGEa8D0GuEevkjhTA" async></script>
+  
+  <meta property="og:title" content="AI Call Agent for Clinics & Restaurants | Lumi">
+  <meta property="og:description" content="Boost bookings and reduce missed calls with Lumi AI voice agent. Try it now.">
+  <meta property="og:image" content="https://lumicalls.com/resources/LumiFinalLogo.png">
+  <meta property="og:url" content="https://lumicalls.com">
+
+  <!-- Twitter meta tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="AI Call Agent for Clinics & Restaurants | Lumi">
+  <meta name="twitter:description" content="Boost bookings and reduce missed calls with Lumi AI voice agent. Try it now.">
+  <meta name="twitter:image" content="https://lumicalls.com/resources/LumiFinalLogo.png">  
+
+  <title>Lumi AI</title>
+  <link rel="icon" href="./resources/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="./nav-bar.css">
   <link rel="stylesheet" href="./media-query.css">
   <link rel="stylesheet" href="./header.css">
@@ -37,11 +55,11 @@
         <a href="#why-lumi">Why Lumi?</a>
         <a href="#faq">FAQ</a>
         <!-- Mobile-only Book button inside nav -->
-        <a href="https://cal.com/lumiteam/lumi-team-call" target="_blank" rel="noopener noreferrer" class="book-btn mobile-visible" style="color: white; border-radius: 5px; margin-top: 0px;">Book</a>
+        <a href="https://cal.com/nasser-tadili/lumi-discovery-call" target="_blank" rel="noopener noreferrer" class="book-btn mobile-visible" style="color: white; border-radius: 5px; margin-top: 0px;">Book</a>
       </div>
   
       <!-- Book Button (Desktop Only) -->
-      <a href="https://cal.com/lumiteam/lumi-team-call" target="_blank" rel="noopener noreferrer" class="book-btn desktop-only">Book</a>
+      <a href="https://cal.com/nasser-tadili/lumi-discovery-call" target="_blank" rel="noopener noreferrer" class="book-btn desktop-only">Book</a>
   
       <!-- Hamburger Menu Button -->
       <button class="menu-toggle" id="menuToggle" aria-label="Toggle menu" onclick="toggleMenu()">
@@ -64,7 +82,7 @@
 
     <div class="cta-btns">
       <a href="#" onclick="openModal()" class="slide-up2"><div class="try-btn">Try Lumi</div></a>
-      <a href="https://cal.com/lumiteam/lumi-team-call" target="_blank" rel="noopener noreferrer" class="slide-up2-3"><div class="header-btn">Book a call</div></a>
+      <a href="https://cal.com/nasser-tadili/lumi-discovery-call" target="_blank" rel="noopener noreferrer" class="slide-up2-3"><div class="header-btn">Book a call</div></a>
       
       <div class="efficient-arrow slide-up3">
         <p>Quick and efficient</p>
@@ -81,7 +99,7 @@
     </div> -->
 
     <div class="video-container slide-up3">
-      <iframe src="https://www.youtube.com/embed/4SNThp0YiU4?si=u03tmA0OPRWkEE4r" 
+      <iframe src="https://www.youtube.com/embed/-Ob4bVjUtRo?si=zC33ir5EE0dlh1oB" 
       frameborder="0" 
       allowfullscreen>
       </iframe>
@@ -143,7 +161,7 @@
       <div class="outbound-text">
         <h2>Outbound calls</h2>
         <p>Confirm bookings and reduce no-shows automatically</p>
-        <a href="https://cal.com/lumiteam/lumi-team-call" target="_blank" rel="noopener noreferrer"><div class="book-btn">I'm in</div></a>
+        <a href="https://cal.com/nasser-tadili/lumi-discovery-call" target="_blank" rel="noopener noreferrer"><div class="book-btn">I'm in</div></a>
         <!-- Arrow for Outbound -->
         <img src="./resources/arrow1.png" alt="arrow" class="arrow arrow-outbound">
       </div>
@@ -175,7 +193,7 @@
       <div class="inbound-text">
         <h2>Inbound calls</h2>
         <p>Answer every call, book every customer</p>
-        <a href="https://cal.com/lumiteam/lumi-team-call" target="_blank" rel="noopener noreferrer"><div class="book-btn">I'm in</div></a>
+        <a href="https://cal.com/nasser-tadili/lumi-discovery-call" target="_blank" rel="noopener noreferrer"><div class="book-btn">I'm in</div></a>
         <!-- Arrow for Inbound -->
         <img src="./resources/arrow2.png" alt="arrow" class="arrow arrow-inbound">
       </div>
@@ -314,7 +332,7 @@
     <!-- Top CTA Section -->
     <div class="cta-section">
       <h2 class="cta-title">Integrate Lumi!</h2>
-      <a href="https://cal.com/lumiteam/lumi-team-call" target="_blank" rel="noopener noreferrer" class="cta-button">Book a Call</a>
+      <a href="https://cal.com/nasser-tadili/lumi-discovery-call" target="_blank" rel="noopener noreferrer" class="cta-button">Book a Call</a>
     </div>
   
     <!-- Footer Bottom Section -->
